Ensure consistent scaling of images in /artists/ pages
Using tables rather than divs means that .stretched-link doesn't work,
so JS is now needed for links, but the overall effect is better.

--- a/static/pijuwebui-dark.css
+++ b/static/pijuwebui-dark.css
@@ -68,8 +68,31 @@ button.undecorated {
   transform: translate(-50%, -50%);
 }
 
+.table-artwork-and-description td {
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
 .div-row-hover:hover {
-  background-color: dimgray;
+  background-color: dimgray !important;
+}
+
+.div-row-hover:hover a {
+  color: var(--bs-link-hover-color) !important;
+}
+
+.table-artwork-and-description td:nth-of-type(1) {
+  padding-left: 12px;
+  padding-right: 12px;
+  width: 124px;
+}
+
+.table-artwork-and-description tr:nth-child(odd) {
+  background-color: #272b30;
+}
+
+.table-artwork-and-description tr:nth-child(even) {
+  background-color: #32383e;
 }
 
 .table-row-odd {
