--- a/styles/_common.sass
+++ b/styles/_common.sass
@@ -73,8 +73,27 @@ button.undecorated
     transform: translate(-50%, -50%)
 
 // tables
+.table-artwork-and-description td
+    padding-top: 8px
+    padding-bottom: 8px
+
+// TODO: Rename this class - it's not just applied to divs
 .div-row-hover:hover
-    background-color: $table-hover-background
+    background-color: $table-hover-background !important
+
+.div-row-hover:hover a
+    color: var(--bs-link-hover-color) !important
+
+.table-artwork-and-description td:nth-of-type(1)
+    padding-left: 12px
+    padding-right: 12px
+    width: 124px
+
+.table-artwork-and-description tr:nth-child(odd)
+    background-color: $table-background-odd
+
+.table-artwork-and-description tr:nth-child(even)
+    background-color: $table-background-even
 
 .table-row-odd
     background-color: $table-background-odd
